# youtube-bookmarks-summariser

./: .env.example  .gitignore  README.md  System-Design-v1.md  implementation-plan.md  pyproject.toml  smoketest_synthesis.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CostConfirmModal.jsx  ProgressPanel.jsx  ResultView.jsx  Sidebar.jsx  UploadForm.jsx
tests/fixtures/: sample_videos.json  sample_videos.txt  sample_videos.xml
tests/fixtures/mock_summaries/: videoID0011.md
tests/fixtures/mock_transcripts/: long_transcript.txt  short_transcript.txt
tests/integration/: test_api_pipeline.py  test_full_pipeline.py
tests/unit/: test_api.py  test_cli.py  test_db.py  test_extractors.py  test_gemini_client.py  test_synthesis_agent.py  test_token_tracker.py  test_transcript_summarizer.py  test_url_validator.py  test_youtube_service.py
youtubesynth/: cli.py  config.py  exceptions.py  main.py  pipeline.py
youtubesynth/agents/: base_agent.py  prompts.py  synthesis_agent.py  transcript_summarizer.py
youtubesynth/api/: routes.py  schemas.py  sse.py
youtubesynth/extractors/: __init__.py  json_extractor.py  playlist_extractor.py  txt_extractor.py  url_validator.py  xml_extractor.py
youtubesynth/services/: db.py  gemini_client.py  token_tracker.py  youtube_service.py
